[tool.poetry]
name = "project-3-aws"
version = "0.1.0"
description = ""
authors = ["Daniel Tavares <daniel.mts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.11.9"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
